[package]
name = "browser-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
embed-manifest = "1.4.0"

[dependencies]
gpui-webview = { git = "https://github.com/longbridge/gpui-component.git", package = "gpui-webview" }
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", features = ["webview"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
flume = "0.11"
anyhow = "1.0"
dirs = "5.0"